# src/modules/users/routes/userRoutes.ts
@@ -13,7 +13,7 @@ const uploadAvatar = multer(uploadConfig.upload("./tmp/avatar"));
 
 userRouter.post('/user/create', userController.createUser)
 userRouter.post('/user/login', userController.logIn)
-userRouter.get('/user/find/email',ensureAuthenticate, userController.findByEmail)
+userRouter.post('/user/find/email',ensureAuthenticate, userController.findByEmail)
 userRouter.get('/user/find/userId',ensureAuthenticate, userController.findById)
 userRouter.post('/user/follow/:id',ensureAuthenticate, userController.follow)
 userRouter.patch('/user/avatar',ensureAuthenticate,uploadAvatar.single("avatar"), userController.addAvatar)
